boinc (5.9.3-1) experimental; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - Fixed wrong CPU information on alpha, hppa, ia64, ppc and sparc.
      (closes: #406853)

  +++ Changes unsuitable for the trunk branch:

  * Updates for the new Python policy:
    - Added python-support (>= 0.4.2) to Build-Depends.
    - Replaced dh_python with dh_pysupport in debian/rules.
  * debian/control: Added "tcsh | c-shell" to boinc-server's Depends field
    since tools/db_query and tools/watch_tcp use /bin/csh as interpreter.
  * debian/boinc-server.README.Debian: Added README.Debian which is at the
    moment only a pointer to http://wiki.debian.org/BOINC/Server.
  * boinc-server.install: Added new files: db/init_db, sched/db_dump_spec.xml,
    test/uc_result, test/uc_wu_nodelete, tools/cleanlogs.sh,
    tools/create_work_example, tools/makelog.sh, tools/project.xml,
    tools/run_in_ops and tools/updater. Some of them were required by the
    tools/make_project script.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 11 Apr 2007 13:43:42 +0200

boinc (5.8.17-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - BOINC Manager:
      - Broadened "Options" dialog so that labels does not get truncated.
        (closes: #389840)
      - Display project names in "Reset Project" dialog correctly. (LP: #83708)
      - Fixed run mode entries in "Activity" menu. (LP: #93850)
  * debian/control:
    - Bumped versioned Build-Depends on libcurl3-openssl-dev to >= 7.15.5
      which is required for the bandwith-throttling feature. Also removed the
      alternative on libcurl-ssl-dev because this was only added to aid
      backporting BOINC to sarge but sarge has only libcurl3-dev/7.13.2.
    - Added libxml2-utils to Build-Depends for xmllint which is used in the
      unit-test target in debian/rules.
  * debian/rules:
    - Added the unit-test target which uses xmllint to check if the XML