@@ -7,7 +7,7 @@
  This file is licensed under the terms of the GNU General Public License,
  Version 2 or any later version published by the Free Software Foundation.
 
- Copyright © 2005, 2006 Debian BOINC Maintainers
+ Copyright © 2005, 2006, 2007 Debian BOINC Maintainers
 -->
 
 <!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
@@ -17,7 +17,7 @@
   <!ENTITY dhgroupmail "<email>pkg-boinc-devel@lists.alioth.debian.org</email>">
 
   <!ENTITY dhbinary    "boincmgr">
-  <!ENTITY dhdate      "<date>August 12, 2006</date>">
+  <!ENTITY dhdate      "<date>April 11, 2007</date>">
   
   <!ENTITY debian      "<productname>Debian</productname>">
   <!ENTITY gnu         "<acronym>GNU</acronym>">
@@ -37,6 +37,7 @@
     <copyright>
       <year>2005</year>
       <year>2006</year>
+      <year>2007</year>
       <holder>&dhgroupname;</holder>
     </copyright>
     &dhdate;
@@ -90,9 +91,16 @@
             visible.</para>
         </listitem>
       </varlistentry>
+
+      <varlistentry>
+        <term><option>-b, --boincargs</option></term>
+        <listitem>
+          <para>Startup BOINC with these optional arguments.</para>
+        </listitem>
+      </varlistentry>
       
       <varlistentry>
-        <term><option>-insecure, --insecure</option></term>
+        <term><option>-i, --insecure</option></term>
         <listitem>
           <para>Disable BOINC security users and permissions.</para>
         </listitem>
