@@ -4,6 +4,7 @@ boinc (5.9.3-1) experimental; urgency=low
   * New upstream release.
     - Fixed wrong CPU information on alpha, hppa, ia64, ppc and sparc.
       (closes: #406853)
+  * Updated boinc_client's and boincmgr's manual pages for the new release.
 
   +++ Changes unsuitable for the trunk branch:
 
@@ -20,7 +21,7 @@ boinc (5.9.3-1) experimental; urgency=low
     tools/run_in_ops and tools/updater. Some of them were required by the
     tools/make_project script.
 
- -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 11 Apr 2007 13:43:42 +0200
+ -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 11 Apr 2007 14:37:56 +0200
 
 boinc (5.8.17-1) unstable; urgency=low
 
